# Image-Classification-of-Retail-Products

./: .gitignore  README.md  app.py  download_dataset.sh  env_vars.env  pyproject.toml  run_interface.sh  run_server_interface.sh  setup_training.sh  start_server.sh
data/: label_queries.json
interface/: interface.py
retail_multi_model/api/: model.py  server.py
retail_multi_model/core/: model.py
retail_multi_model/train/: dataset.py  inference.py  train.py  utils.py
