[tool.poetry]
name = "retail_multi_model"
version = "0.1.0"
description = "multi class classification model for classifying retail products from a supermarket"
authors = ["ugm2 <unaigaraymaestre@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
Pillow = "^8.4.0"
requests = "^2.26.0"
numpy = "^1.21.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
