[tool.poetry]
name = "retail_multi_model"
version = "0.1.0"
description = "multi class classification model for classifying retail products from a supermarket"
authors = ["ugm2 <unaigaraymaestre@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
Pillow = "^8.4.0"
requests = "^2.26.0"
numpy = "^1.21.4"
transformers = "^4.12.5"
scikit-learn = "^1.0.1"

[tool.poe.tasks]
force-cuda11 = "python -m pip install torch==1.10.0+cu113 torchvision==0.11.1+cu113 torchaudio==0.10.0+cu113 -f https://download.pytorch.org/whl/cu114/torch_stable.html"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
